# deepin-music

./: .clog.toml  .gitignore  .project.json  .transifexrc  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.user.ee235cc  ChangeLog  Makefile  README  README.md  README.zh_CN.md  Task.md  config.h.in  deepin-music-player.desktop  deepin-music.desktop  deepin-music.pro  deploy_dep  dmusic  groups  install_dep  linglong.yaml  music.pro  nohup.out  os  project.config  repos.sh  requirements.txt  testing.md
music/: CMakeLists.txt  None.json  config.pri  music.db  Ö»ÒªÓÐÄã£¨ÉÙÄê°üÇàÌìÆ¬Î²Çú£©.json  依然是你.json  往快乐逃.json  愿得一人心.json  我们的情歌.json  白色恋人.json  红糖水.json  说走就走的旅行.json
music/interface/: interface.pri  metasearchengine.h  plugininterface.h  searchmeta.h
music/libdmusic/: CMakeLists.txt  libdmusic.pro  libdmusic_global.h  mediameta.cpp  mediameta.h  metadetector.cpp  metadetector.h  musicmeta.h
music/libmusic-plugin/: CMakeLists.txt  musicvoiceplugin.h  scheduleDemo.pro  scheduledemoplugin.cpp  scheduledemoplugin.h  scheduledemowidget.cpp  scheduledemowidget.h  scheduleservice.cpp  scheduleservice.h
music/music-player/: CMakeLists.txt  ac-desktop-define.h  acobjectlist.h  build.pri  config.qrc  install.pri  main.cpp  musicapp.cpp  musicapp.h
music/plugin/: plugin.pro
src/: #cover_query.py#  CMakeLists.txt  banner_manager.py  common.py  config.pri  config.py  constant.py  cover_download.py  cover_manager.py  cover_query.py  cue_parser.py  dbtest.py  dbusManager.py  dbus_manager.py  dbus_notify.py  deepin-music.py  demo.py  doubanfm.py  doubanfm2.py  doubanfm_player.py  download_manager.py  easymp3.py  fetch_pls.py  findfile.py  helper.py  hpane.py  library.py  logger.py  lrc_download.py  lrc_manager.py  lrc_parser.py  lrcparser.py  main.py  menu.py  mmkeys_wrap.py  mscddb.py  mycurl.py  nls.py  option_parser.py  osd_lrc_module.py  (+26 more)
src/app/: __init__.py  deepinplayer.py
src/config/: __init__.py  constants.py
src/controllers/: __init__.py  configworker.py  coverworker.py  dbworker.py  downloadsongworker.py  downloadworker.py  i18nworker.py  lrcworker.py  mediaplayer.py  menuworker.py  muscimanageworker.py  net.py  onlinemuscimanageworker.py  playlistworker.py  playlistworker_bak.py  searchworker.py  signalmanager.py  utils.py  utilworker.py  web360apiworker.py  windowmanageworker.py
src/data/: all_webcasts.db  chinese_dict.db  radios.db  webcasts.db
src/dwidgets/: __init__.py  coverengine.py  dlistmodel.py  dmenu.py  dquickview.py  dquickwidget.py  dsingleapplication.py  dthreadutil.py  leveldict.py  mainrect.qml  qmodel.py  threadpool.py
src/interface/: plugininterface.h  searchmeta.h
src/libdmusic/: CMakeLists.txt  config.qrc  ffmpegdynamicinstance.cpp  ffmpegdynamicinstance.h  global.cpp  global.h  libdmusic.pro  libdmusic_global.h  mediameta.cpp  mediameta.h  metadetector.cpp  metadetector.h  musicmeta.h  playlistmeta.h  presenter.cpp  presenter.h
src/libmusic-plugin/: CMakeLists.txt  config.qrc  musicvoiceplugin.cpp  musicvoiceplugin.h  musicvoiceservice.cpp  musicvoiceservice.h  voiceplugin.cpp  voiceplugin.h
src/log/: __init__.py
src/models/: __init__.py  music.db  musicdb.py  musicmodel.py  musicmodel_bak.py  qmodel.py  testdb.py
src/music-player/: CMakeLists.txt  ac-desktop-define.h  accessiblefunctions.h  acobjectlist.h  config.qrc  dci.qrc  deepin-music.qrc  install.pri  main.cpp  main.qml  music-player.pro  musicapp.cpp  musicapp.h  sleepwatcher.cpp  sleepwatcher.h
src/objbrowser/: BB.qss  __init__.py  attribute_model.py  objectbrowser.py  toggle_column_mixin.py  treeitem.py  treemodel.py  utils.py  version.py
src/parse/: __init__.py  _match.py  _pattern.py  _query.py
src/player/: __init__.py  fadebin.py
src/plugin/: plugin.pro
src/plugins/: gajim.py  pidgin.py
src/qframer/: __init__.py  ffloatwidget.py  fglobalsearch.py  fmainwindow.py  fmenu.py  fmenubar.py  fmoveablewidget.py  fsingleapplication.py  fsplashscreen.py  fstatusbar.py  fsuspensionwidget.py  ftablewidget.py  ftitlebar.py  futil.py  fwebkitbasepage.py
src/source/: audiocd.py  local.py  old.py
src/views/: Constants.qml  DCycleButton.qml  DDownloadButton.qml  DLrcButton.qml  DMoveableWindow.qml  DNextButton.qml  DPlayButton.qml  DPlaylistButton.qml  DPreButton.qml  DStarButton.qml  DVolumeButton.qml  DownloadPage.qml  LeftSideBar.qml  Main.qml  MainController.qml  MainMusic.qml  MainWindow.qml  MainWindowController.qml  MediaController.qml  MiniWindow.qml  MiniWindowController.qml  MusicManagerPage.qml  PlayBottomBar.qml  PlayListPage.qml  SimpleController.qml  SimpleMusicInfo.qml  SimplePlayBar.qml  SimpleSlider.qml  SimpleWindow.qml  SimpleWindowController.qml  TitleBar.qml  Utils.js  WebEngineViewPage.qml  WebMusic360Page.qml  __init__.py  basewindow.py  dmusic.src.js  layoutmain.qml  lrcwindow.py  main.qml  (+9 more)
src/widget/: .#song_item.py  __init__.py  browser.py  browser_manager.py  castlist.py  combo.py  completion_window.py  converter.py  cover.py  dialog.py  discard_browser.py  doubanfm_browser.py  download_item.py  download_page.py  download_view.py  equalizer.py  global_keys.py  global_search.py  headerbar.py  information.py  instance.py  jobs_manager.py  list_item.py  list_manager.py  local_browser.py  local_item.py  local_tab.py  lyrics.py  lyrics_module.py  lyrics_search.py  main.py  mini.py  new_timer.py  notebook.py  outlookbar.py  page_switcher.py  playlist.py  playlist_item.py  plugins_view.py  popup_volume.py  (+32 more)
tests/: 123.lrc  CMakeLists.txt  Music-GTest-running.sh  application.cpp  application.h  collection-coverage.sh  test-prj-running.sh  testApplication.cpp  testDataBaseService.cpp  testImportWidget.cpp  testListScroll.cpp  testListViewAlbum.cpp  testLyricWidget.cpp  testMain.cpp  testMusicBaseAndSongList.cpp  testMusicListDialg.cpp  testPlayListView.cpp  testPlayQueueWidget.cpp  testQtMediaPlayer.cpp  testShortcut.cpp  testSingerListView.cpp  test_application.cpp  test_main.cpp  test_qtestDefine.h
tests/googletest/: gtest_dependency.pri
tests/libdmusic-test/: CMakeLists.txt  test_main.cpp  test_presenter.cpp  ut-build-run.sh
(+2383 files in other folders)
